<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"Screen Corner "</string>
    <string name="general_setting">GENERAL</string>
    <string name="enable_service">Enable Screen Corners</string>
    <string name="boot_start">Start on boot</string>
    <string name="overlap">Overlap status bar</string>
    <string name="enable_lockscreen">Enable on lock screen</string>
    <string name="show_icon">Show icon on status bar</string>
    <string name="go_to_setting">Click here to go Settings</string>
    <string name="rate_this_app">Rate this app if you like it</string>
    <string name="rate_message">If you like this app, please let us know. Thanks!</string>
    
    <string name="corner_design">DESIGN</string>
    <string name="choose_style">Choose your style</string>
    <string name="corner_position">Position</string>
    <string name="top_left">Top Left</string>
    <string name="top_right">Top Right</string>
    <string name="bottom_left">Bottom Left</string>
    <string name="bottom_right">Bottom Right</string>
    <string name="corner_size">Size</string>
    
    <string name="support">SUPPORT</string>
    <string name="share_app">Share this app</string>
    <string name="help_center">Help center</string>
     <string name="help_translate">Help us translate language</string>
    
    <string name="rate_us">Rate this app</string>
    <string name="send_feedback">Send a feedback</string>
    <string name="about">About this app</string>


</resources>