<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="16dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_setting"
                android:textColor="#004D40"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#80003333" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchEnable"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/enable_service" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#80003333" />

            <CheckBox
                android:id="@+id/cbStartOnBoot"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:text="@string/boot_start"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#80003333" />

            <CheckBox
                android:id="@+id/cbOverlap"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:text="@string/overlap"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#80003333" />

            <CheckBox
                android:id="@+id/cbLockScreen"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:text="@string/enable_lockscreen"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#80003333" />

            <CheckBox
                android:id="@+id/cbShowIcon"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:text="@string/show_icon"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/corner_design"
                android:textColor="#004D40"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#80003333" />

            <LinearLayout
                android:id="@+id/itemChooseCorner"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_background"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="80dp"
                    android:text="@string/choose_style"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/ivCorner"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/topleft0" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#80003333" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/corner_position"
                    android:textColor="#757575"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <CheckBox
                            android:id="@+id/cbTopLeft"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/top_left" >
                        </CheckBox>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <CheckBox
                            android:id="@+id/cbTopRight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/top_right" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <CheckBox
                            android:id="@+id/cbBottomLeft"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bottom_left" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <CheckBox
                            android:id="@+id/cbBottomRight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bottom_right" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#80003333" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/corner_size"
                    android:textColor="#757575"
                    android:textSize="14sp" />

                <com.gc.materialdesign.views.Slider
                    android:id="@+id/sliderSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00796B"
                    materialdesign:max="90"
                    materialdesign:min="10" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/support"
                android:textColor="#004D40"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#80003333" />

            <LinearLayout
                android:id="@+id/itemRate"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/button_background"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_this_app"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#80003333" />

            <LinearLayout
                android:id="@+id/itemHelp"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/button_background"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_center"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#80003333" />

            <LinearLayout
                android:id="@+id/itemTranslate"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/button_background"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_translate"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>