<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:context=".HelpActivity" >

        <com.gc.materialdesign.views.LayoutRipple
            android:id="@+id/itemShare"
            android:layout_width="fill_parent"
            android:layout_height="64dp"
            android:background="#01ffffff"
            android:clickable="true" >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="32dp"
                android:src="@drawable/rate_us" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="104dp"
                android:text="@string/share_app"
                android:textColor="#FFC107"
                android:textStyle="bold" />
        </com.gc.materialdesign.views.LayoutRipple>

        <com.gc.materialdesign.views.LayoutRipple
            android:id="@+id/itemFeedback"
            android:layout_width="fill_parent"
            android:layout_height="64dp"
            android:background="#01ffffff"
            android:clickable="true" >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="32dp"
                android:src="@drawable/send_feedback" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="104dp"
                android:text="@string/send_feedback"
                android:textColor="#4CAF50"
                android:textStyle="bold" />
        </com.gc.materialdesign.views.LayoutRipple>

        <com.gc.materialdesign.views.LayoutRipple
            android:id="@+id/itemAbout"
            android:layout_width="fill_parent"
            android:layout_height="64dp"
            android:background="#01ffffff"
            android:clickable="true" >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="32dp"
                android:src="@drawable/about" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="104dp"
                android:text="@string/about"
                android:textColor="#E57373"
                android:textStyle="bold" />
        </com.gc.materialdesign.views.LayoutRipple>
    </LinearLayout>

</ScrollView>